[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git="https://github.com/iced-rs/iced.git", branch="master", features = ["image"]}
native-dialog = "0.6.3"
rand = "0.8.5"
image = { package = "image", version = "0.24.2", features = ["jpeg"] }
float-ord = "0.3.2"
jpeg-encoder = "0.5.1"
bitcoin = "0.28.1"
bitcoincore-rpc = "0.15.0"
rusty-leveldb = "1.0.3"
rs-leveldb = "0.1.5"
hex = "0.4.1"
trie-rs = "0.1.1"