[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git="https://github.com/iced-rs/iced.git", branch="master", features = ["image"], optional = true}
native-dialog = "0.6.3"
rand = "0.8.5"
image = { package = "image", version = "0.24.2", features = ["jpeg"] }
float-ord = "0.3.2"
jpeg-encoder = "0.5.1"
bitcoin = { version = "0.29.1", features = ["bitcoinconsensus"] }
secp256k1 = { version = "0.24.0", features = ["bitcoin_hashes"] }
bitcoincore-rpc = "0.16.0"
bitcoincore-rpc-json = "0.16.0"
rusty-leveldb = "1.0.3"
rs-leveldb = "0.1.5"
turbojpeg = { version = "0.5.2", features = ["cmake", "pkg-config", "image"], default-features = false }
hex = "0.4.1"
trie-rs = "0.1.1"

[features]
gui = ["dep:iced"]